# sansan-competition

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  REQUIREMENTS.md  firebase.json  main.py  pyproject.toml
.github/workflows/: auto-merge-ai-pr.yml  ci.yml  codex-fix-from-review.yml  pr-automation.yml
docs/: firebase-hosting-cloud-run-setup.md  google-classroom-cli-oauth-setup.md  google_api_setup.md
public/: app.js  index.html  styles.css
samples/: reminder_generation_partial_success.json  submission_analysis_partial_success.json
sansan_competition/: __init__.py  analysis.py  classroom.py  contracts.py  hinata.py  oauth.py  pr_automation.py
sansan_competition/execution/: __init__.py  classroom_client.py  demo.py  errors.py  google_api.py  google_auth.py  posting.py  renderers.py  sample_data.py
scripts/: classroom_fetch_analysis.py  classroom_oauth_smoke.py  classroom_post_reminder.py  deploy_firebase_cloud_run.sh
tests/: test_analysis.py  test_classroom.py  test_contract.py  test_execution_google.py  test_execution_google_api.py  test_execution_integration.py  test_execution_posting.py  test_execution_renderers.py  test_hinata.py  test_main_live_api.py  test_oauth.py  test_pr_automation.py  test_static_assets.py
tests/fixtures/classroom_fetch/: live_like_assignment.json  live_like_assignment_partial.json
